vlib/v/parser/tests/function_variadic_arg_non_final.vv
fn f(para1 ...int, para2 f32) int {
	return 22
}

fn main() {
	a := f(11, 1.1)
}
